--- a/frontend/mydata.html
+++ b/frontend/mydata.html
@@ -102,9 +102,15 @@
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="files-buttons"></ul>
 					</div>
 				</li>
+				<hr>
 				<li class="mb-1">
 					<button class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" onclick="generateUploadButton();">
 						Upload New Data
+					</button>
+				</li>
+				<li class="mb-1">
+					<button style="color:crimson;" class="btn btn-toggle no-before d-inline-flex align-items-center rounded border-0" onclick="generateDataSettings();">
+						Change Data Settings
 					</button>
 				</li>
 			</ul>
