--- a/frontend/create_study.html
+++ b/frontend/create_study.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Profile</title>
+    <title>Create Study</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
 		<a class="navbar-brand" href="homepage.html">
-            <img src="logo.png" alt="Logo" style="height: 30px" />
+			<img src="logo.png" alt="Logo" style="height: 30px;">
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
 					<a class="nav-link" href="mydata.html">My Data</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="mystudies.html">My Studies</a>
+					<a class="nav-link active" href="mystudies.html">My Studies</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="explore.html">Explore</a>
@@ -46,31 +46,26 @@
 		</div>
 	</nav>
     <div class="form-container container">
-        <h2 class="text-center mb-4">Edit Profile</h2>
-        <form id="editProfileForm">
+        <h2 class="text-center mb-4">Create a Study</h2>
+        <form id="create-study-form">
             <div class="mb-3">
-                <label for="nationality" class="form-label">Nationality</label>
-                <input type="text" class="form-control" id="nationality" placeholder="Enter your nationality">
+                <label for="name" class="form-label">Study Name</label>
+                <input type="text" class="form-control" id="name">
             </div>
             <div class="mb-3">
-                <label for="birthdate" class="form-label">Date of Birth</label>
-                <input type="date" class="form-control" id="birthdate">
+                <label for="description" class="form-label">Description</label>
+                <textarea rows="4" class="form-control" id="description"></textarea>
             </div>
             <div class="mb-3">
-                <label for="gender" class="form-label">Gender</label>
-                <select class="form-select" id="gender">
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                    <option value="Other">Other</option>
+                <label for="type" class="form-label">Study Type</label>
+                <select class="form-select" id="type">
+                    <option value="Public">Public</option>
+                    <option value="Private">Private</option>
                 </select>
             </div>
             <div class="mb-3">
-                <label for="height" class="form-label">Height (cm)</label>
-                <input type="number" class="form-control" id="height" placeholder="Enter your height">
-            </div>
-            <div class="mb-3">
-                <label for="weight" class="form-label">Weight (kg)</label>
-                <input type="number" class="form-control" id="weight" placeholder="Enter your weight">
+                <label for="consent-link" class="form-label">Link to the Consent Form</label>
+                <input type="url" class="form-control" id="consent-link" placeholder="Paste the link to the consent form here">
             </div>
             <button type="submit" class="btn btn-primary btn-block mb-5">Save Changes</button>
         </form>
@@ -78,13 +73,9 @@
 
     <script src="scripts.js"></script>
     <script>
-        window.addEventListener("load", function() {
-            getProfile('edit page');
-        });
-
-        document.getElementById("editProfileForm").addEventListener("submit", function(event) {
+        document.getElementById("create-study-form").addEventListener("submit", function(event) {
             event.preventDefault();
-            submitProfile();
+            submitNewStudy();
         });
     </script>
 
