--- a/frontend/mystudies.html
+++ b/frontend/mystudies.html
@@ -13,7 +13,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
 		<a class="navbar-brand" href="homepage.html">
-			<img src="logo.webp" alt="Logo" style="height: 30px;">
+            <img src="logo.png" alt="Logo" style="height: 30px" />
 		</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,11 +56,12 @@
 				<button class="inside-nav nav-link" onclick="goToParticipatedStudies();">Participated Studies</button>
 			</li>
 		</ul>
-	</div>
-	
-	<div class="container">
+
 		<div id="studies-container" class="row"></div>
+
+		<div id="create-study-button"></div>
 	</div>
+
 
 	<script>
 		window.onload = function() {
