--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
         <a class="navbar-brand" href="homepage.html">
-            <img src="logo.webp" alt="Logo" style="height: 30px;">
+            <img src="logo.png" alt="Logo" style="height: 30px" />
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
