--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
     <style>
@@ -24,10 +23,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
-        <a class="navbar-brand" href="homepage.html">
-            <img src="logo.png" alt="Logo" style="height: 30px" />
+        <a class="navbar-brand position-relative" href="homepage.html">
+            <img src="logo.png" alt="Logo" style="height: 30px;">
+            
         </a>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,8 +51,9 @@
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
                 <li class="nav-item" id="navbar-profile">
-                    <a class="nav-link" href="profile.html">
+                    <a class="nav-link position-relative" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
+						<span class="badge bg-danger badge-notification">4</span>
                     </a>
                 </li>
             </ul>
