--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -36,20 +36,70 @@
                     <a class="nav-link" href="about_us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="profile.html">
+                    <a class="nav-link position-relative" href="profile.html">
                         <img src="profile.png" style="height: 30px;">
+						<span class="badge bg-danger badge-notification">...</span>
                     </a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="info-container mb-3">
-        <img style="max-height: 300px; max-width: 450px;" src="profile.avif" class="card-img-top" alt="profile">
-        <div class="card-body">
-            <!-- <br> -->
-            <div id="profileInfo"></div>
-            <br>
-            <button id="editProfile" class="btn btn-primary mr-2">Edit Information</button>
+
+    <div class="row" style="width: 100%;">
+        <div class="col-md-8">
+            <div class="info-container m-5">
+                <img style="max-height: 300px; max-width: 450px;" src="profile.avif" class="card-img-top" alt="profile">
+                <div class="card-body">
+                    <!-- <br> -->
+                    <div id="profileInfo"></div>
+                    <br>
+                    <button id="editProfile" class="btn btn-primary">Edit Information</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="col-md-1"></div> -->
+
+        <div id="message-icon" class="col-md-4">
+            <div class="text-end mt-3">
+                <span class="position-relative" onclick="toggleMessagesDisplay();">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                    </svg>
+                    <span class="badge bg-danger badge-messages">2</span>
+                </span>
+            </div>
+            <div class="messages-container">
+                <ul class="list-group">
+                    <li class="list-group-item p-3">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-3">Invited to the study:<br>"Sleep Recovery"</h5>
+                            <small class="mt-1">3 days ago</small>
+                          </div>
+                          <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae libero aliquam, molestie enim eu, &nbsp;&nbsp;<a href="#">view more > </a></p>
+                          <button class="btn btn-success btn-sm">accept</button>
+                          <button class="btn btn-danger btn-sm">reject</button>
+                    </li>
+                    <li class="list-group-item p-3">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-3">Invited to the study:<br>"Sleep Recovery"</h5>
+                            <small class="mt-1">3 days ago</small>
+                          </div>
+                          <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae libero aliquam, molestie enim eu, &nbsp;&nbsp;<a href="#">view more > </a></p>
+                          <button class="btn btn-success btn-sm">accept</button>
+                          <button class="btn btn-danger btn-sm">reject</button>
+                    </li>
+                    <li class="list-group-item p-3">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-3">Invited to the study:<br>"Sleep Recovery"</h5>
+                            <small class="mt-1">3 days ago</small>
+                          </div>
+                          <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae libero aliquam, molestie enim eu, &nbsp;&nbsp;<a href="#">view more > </a></p>
+                          <button class="btn btn-success btn-sm">accept</button>
+                          <button class="btn btn-danger btn-sm">reject</button>
+                    </li>
+                  </ul>
+            </div>
         </div>
     </div>
 
