--- a/frontend/mystudies.html
+++ b/frontend/mystudies.html
@@ -66,7 +66,11 @@
 
 	<script>
 		window.onload = function() {
-			goToOwnStudies();
+			if (window.location.hash === '#participated') {
+				goToParticipatedStudies();
+			} else {
+				goToOwnStudies();
+			}
             getMessages();
 		};
 	</script>
