--- a/frontend/about_us.html
+++ b/frontend/about_us.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="homepage.html">
             <img src="logo.png" alt="Logo" style="height: 30px" />
         </a>
