--- a/frontend/study.html
+++ b/frontend/study.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="homepage.html">
             <img src="logo.png" alt="Logo" style="height: 30px" />
         </a>
