--- a/frontend/html/homepage.html
+++ b/frontend/html/homepage.html
@@ -2,39 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="../css/chatbot_styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explore</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="../css/general_styles.css">
-    <style>
-        .chart-container {
-            height: 40vh;
-            width: auto;
-        }
-
-        .chart-wrapper {
-            margin-top: 70px;
-            margin-bottom: 170px;
-        }
-    </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg ps-3 navbar-light bg-light fixed-top">
-        <a class="navbar-brand position-relative" href="homepage.html">
-            <img src="../images/logo.png" alt="Logo" style="height: 30px;">
-            
-        </a>
-        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
-            <ul class="navbar-nav">
+		<a class="navbar-brand" href="homepage.html">
+            <img src="../images/logo.png" alt="Logo" style="height: 30px" />
+		</a>
+		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
+			<ul class="navbar-nav">
                 <li class="nav-item" id="navbar-data">
                     <a class="nav-link" href="mydata.html">My Data</a>
                 </li>
@@ -59,206 +46,35 @@
                     </a>
                 </li>
             </ul>
-        </div>
-    </nav>
+		</div>
+	</nav>
+    
+    <div class="container mt-4 mb-4">
+		<ul id="studies-nav" class="nav nav-tabs">
+			<li class="nav-item">
+				<button class="inside-nav nav-link active" onclick="getPublicStudies();">Availabe Studies</button>
+			</li>
+			<li class="nav-item">
+				<button class="inside-nav nav-link" onclick="getPublicUserData();">Public Data</button>
+			</li>
+		</ul>
 
-    <div class="container mt-5">
-        <h2 class="mb-4 text-center">Sleep Data Dashboard</h2>
+		<div id="studies-container" class="row"></div>
 
-        <div class="row chart-wrapper justify-content-center text-center">
-            <div class="col-md-10 col-lg-8">
-                <div class="justify-content-center">
-                    <canvas id="sleepHoursChart"></canvas>
-                </div>
-            </div>
-            <div class="text-center mt-3">
-                <p>
-                    This graph shows the average hours of sleep per night over the
-                    past month. The data indicates fluctuations in sleep patterns,
-                    highlighting the importance of maintaining a consistent sleep
-                    schedule.
-                </p>
-            </div>
-        </div>
+	</div>
 
-        <div class="row chart-wrapper justify-content-center text-center">
-            <div class="col-md-10 col-lg-8">
-                <div class="justify-content-center">
-                    <canvas id="sleepQualityChart"></canvas>
-                </div>
-            </div>
-            <div class="text-center mt-3">
-                <p>
-                    This graph illustrates the quality of sleep on a scale of 1 to 10
-                    over the past month. It shows how different factors such as
-                    stress, diet, and exercise can impact sleep quality.
-                </p>
-            </div>
-        </div>
-
-        <div class="row chart-wrapper justify-content-center text-center">
-            <div class="col-md-10 col-lg-8">
-                <div class="justify-content-center">
-                    <canvas id="bedtimeChart"></canvas>
-                </div>
-            </div>
-            <div class="text-center mt-3">
-                <p>
-                    This graph represents the average bedtime over the past month. It
-                    emphasizes the benefits of going to bed at a regular time each
-                    night to improve overall sleep quality.
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="floating-chat">
-        <div class="robot-icon">
-            <img src="../images/robot-icon.png" alt="Chat Icon" width="60" height="60">
-        </div>
-        <div class="chat">
-            <div class="header">
-                <span class="title">SleepVention Chatbot</span>
-                <button><i class="fa fa-times" aria-hidden="true"></i></button>
-            </div>
-            <ul class="messages">
-                <li class="other">
-                    <img src="../images/robot-icon.png" alt="Other Avatar">
-                    <p>Hello! I am SleepVention chatbot, how can I help you?</p>
-                </li>
-                <li class="self">
-                    <p class="self">I have a question.</p>
-                </li>
-                <li class="other">
-                    <img src="../images/robot-icon.png" alt="Other Avatar">
-                    <p>Sure! What is it?</p>
-                </li>
-            </ul>
-            <div class="footer">
-                <div class="text-box" contenteditable="true" disabled="true"></div>
-                <button id="sendMessage">send</button>
-            </div>
-        </div>
-    </div>
-
-
-    <script src="../scripts/scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../scripts/chatbot_scripts.js"></script>
     <script>
         window.addEventListener("load", function() {
             getHomepage();
+            getPublicStudies();
             getMessages();
         });
-
-
-        // Data for Sleep Hours Chart
-        const sleepHoursData = {
-            labels: ["Week 1", "Week 2", "Week 3", "Week 4"],
-            datasets: [
-                {
-                    label: "Average Sleep Hours",
-                    data: [7.5, 6.8, 7.2, 7.0],
-                    backgroundColor: "rgba(54, 162, 235, 0.2)",
-                    borderColor: "rgba(54, 162, 235, 1)",
-                    borderWidth: 1,
-                },
-            ],
-        };
-
-        // Data for Sleep Quality Chart
-        const sleepQualityData = {
-            labels: ["Day 1", "Day 2", "Day 3", "Day 4", "Day 5", "Day 6", "Day 7"],
-            datasets: [
-                {
-                    label: "Sleep Quality (1-10)",
-                    data: [7, 6, 8, 7, 5, 6, 7],
-                    backgroundColor: "rgba(75, 192, 192, 0.2)",
-                    borderColor: "rgba(75, 192, 192, 1)",
-                    borderWidth: 1,
-                },
-            ],
-        };
-
-        // Data for Bedtime Chart
-        const bedtimeData = {
-            labels: ["Week 1", "Week 2", "Week 3", "Week 4"],
-            datasets: [
-                {
-                    label: "Average Bedtime",
-                    data: [22, 22.5, 23, 22],
-                    backgroundColor: "rgba(153, 102, 255, 0.2)",
-                    borderColor: "rgba(153, 102, 255, 1)",
-                    borderWidth: 1,
-                },
-            ],
-        };
-
-        // Configuration for Sleep Hours Chart
-        const sleepHoursConfig = {
-            type: "line",
-            data: sleepHoursData,
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true,
-                        position: "top",
-                    },
-                },
-            },
-        };
-
-        // Configuration for Sleep Quality Chart
-        const sleepQualityConfig = {
-            type: "bar",
-            data: sleepQualityData,
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true,
-                        position: "top",
-                    },
-                },
-            },
-        };
-
-        // Configuration for Bedtime Chart
-        const bedtimeConfig = {
-            type: "line",
-            data: bedtimeData,
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true,
-                        position: "top",
-                    },
-                },
-            },
-        };
-
-        // Render Charts
-        window.onload = function () {
-            const sleepHoursCtx = document
-                .getElementById("sleepHoursChart")
-                .getContext("2d");
-            new Chart(sleepHoursCtx, sleepHoursConfig);
-
-            const sleepQualityCtx = document
-                .getElementById("sleepQualityChart")
-                .getContext("2d");
-            new Chart(sleepQualityCtx, sleepQualityConfig);
-
-            const bedtimeCtx = document
-                .getElementById("bedtimeChart")
-                .getContext("2d");
-            new Chart(bedtimeCtx, bedtimeConfig);
-        };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <script src="../scripts/scripts.js"></script>
 </body>
 
 </html>
