--- a/frontend/html/explore.html
+++ b/frontend/html/explore.html
@@ -7,6 +7,7 @@
     <title>Explore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../css/chatbot_styles.css">
     <link rel="stylesheet" href="../css/general_styles.css">
